--- a/coin/coins.yml
+++ b/coin/coins.yml
@@ -414,3 +414,11 @@
   decimals: 18
   blockTime: 3000
   sampleAddress: '0x35552c16704d214347f29Fa77f77DA6d75d7C752'
+
+- id: 461
+  symbol: FIL
+  handle: filecoin
+  name: 'Filecoin'
+  decimals: 18
+  blockTime: 3000
+  sampleAddress: 't1nbb73vhk5dtmnsgeaetbo76daepqjtrfoccn74i'
