--- a/coin/coins.yml
+++ b/coin/coins.yml
@@ -390,7 +390,7 @@
   sampleAddress: 'NEAR6Y66fCzeKqWiwxoPox5oGeDN9VhNCu7CEQ9M86iniqoN9vg2X'
 
 - id: 508
-  symbol: ERD
+  symbol: eGLD
   handle: elrond
   name: Elrond
   decimals: 18
