update test label

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: Test
+    - name: Test network module
       run: go test -v ./...
       working-directory: network
