--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,3 +28,7 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: Test network module
+      run: go test -v ./...
+      working-directory: network
