--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,26 +8,27 @@ on:
 
 jobs:
 
-  build:
-    name: Build
+  test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
-
-    - name: Set up Go 1.x
+    - name: Setup go
       uses: actions/setup-go@v2
       with:
         go-version: ^1.18
       id: go
 
-    - name: Check out code into the Go module directory
+    - name: Checkout
       uses: actions/checkout@v2
-
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
 
     - name: Test
       run: go test -v ./...
 
-    - name: Lint
-      run: make lint
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.45.2
